# markovian-thinker

./: .mcp.json  Cargo.toml  GPU_BUILD_GUIDE.md  LICENSE  NO_PLACEHOLDERS_COMPLETE.md  PARALLEL_EXECUTOR_DESIGN.md  PARALLEL_EXECUTOR_README.md  PROJECT_SUMMARY.md  README.md  RUNNING.md  TRAINING_FEATURES.md  build.rs  claude_desktop_config.json  mcp_config.json
.claude/: agent-orchestration.md  automation-examples.md  cognitive-nervous-system.md  continuous-work-protocol.md  micro-claude.md  parallel-execution-guide.md
cuda/: parallel_kernels.cu
icarus-core/: CLAUDE_CODE_SETUP.md  CLAUDE_CODE_WEB_SETUP.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_STATUS.md  Dockerfile  GITHUB_REPO_CREATOR_SETUP.md  GPTOSS_INTEGRATION.md  ICARUS_ARCHITECTURE.md  ICARUS_MCP_SERVER.md  ICARUS_ROADMAP.md  ICARUS_TIC_INTEGRATION.md  IMPLEMENTATION_PROGRESS.md  INSTALLATION.md  INTEGRATION_STATUS.md  LEARNING_SYSTEM_GUIDE.md  MCP_CLIENT_USAGE.md  MCP_DEPLOYMENT_GUIDE.md  MONTE_CARLO_README.md  PERFORMANCE_RESULTS.md  PHASE6_COMPLETION_REPORT.md  PHASE6_FINAL_SUMMARY.md  PHASE6_SUMMARY.md  PHASE6_USER_GUIDE.md  PHASE7_COMPLETE.md  PHASE7_PERFORMANCE.md  PHASE7_PLAN.md  PHASE8_COMPLETE.md  PHASE8_PLAN.md  PROGRESS.md  QUICKSTART_PHASE6.md  QUICK_REFERENCE.md  README.md  STATUS.md  TESTING.md  build-and-deploy.bat  create-github-repo.bat  docker-compose.yml  icarus-autonomous.service  kill-icarus.sh  (+7 more)
icarus-core/.claude/: README.md  proactive-workflows.json
icarus-core/.claude/commands/: README.md  feature-implement.md  market-intelligence.md  optimize-performance.md  portfolio-generator.md  proposal-writer.md
icarus-core/.github/: ADVANCED_RUNNERS_GUIDE.md  AUTOMATION_GUIDE.md  setup-runner.sh
icarus-core/.github/local-scripts/: README.md  ai-feature-generator.sh  generate-proposal.sh  generate-upwork-content.sh  run.sh
icarus-core/.github/workflows/: README.md  ai-code-assistant.yml  ai-feature-generator.yml  auto-deploy.yml  auto-docs.yml  auto-format.yml  auto-security.yml  auto-test.yml  auto-update-deps.yml  client-proposal-generator.yml  market-intelligence.yml  ml-performance-optimizer.yml  portfolio-auto-showcase.yml
icarus-core/benches/: phase7_benchmarks.rs  storm_mitigation_bench.rs
icarus-core/docs/: GEOMETRODYNAMIC_LEARNING.md  LATTICE_THEORY.md  PHASE_FIELD_DYNAMICS.md
icarus-core/examples/: complete_phase6_demo.rs  e2e_storm_mitigation.rs  full_integration.rs  interactive_learning.rs  performance_test.rs  teach_icarus.rs
icarus-core/freelance-kit/: ACTION_PLAN.md  FIVERR_GIGS.md  JOB_APPLICATION_TEMPLATES.md  PORTFOLIO_README.md  PROFILE_BIO.md  UPWORK_PROFILE.md
icarus-core/portfolio/: PORTFOLIO.md
icarus-core/portfolio/rustml-sentiment-api/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
icarus-core/portfolio/rustml-sentiment-api/demo/: docker-compose.yml  index.html  nginx.conf  run-demo.sh  run-local.sh
icarus-core/portfolio/rustml-sentiment-api/examples/: api_client.sh  basic_usage.rs
icarus-core/portfolio/rustml-sentiment-api/src/: error.rs  lib.rs  main.rs  models.rs  routes.rs  sentiment_analyzer.rs  text_classifier.rs
icarus-core/portfolio/rustml-sentiment-api/tests/: integration_tests.rs
icarus-core/portfolio/sentiment-intelligence-platform/: .gitignore  Dockerfile  README.md  SETUP.md  START_HERE.md  app.ts  build.sh  deploy.sh  docker-compose.yml  index.html  nginx.conf  package.json  tsconfig.json
icarus-core/portfolio/upwork-submission/: 00-all-in-one.html  01-api-demo.html  02-project-overview.html  03-test-results.html  04-architecture.html  COMPLETE_PACKAGE.md  DEPLOYMENT_GUIDE.md  INTERACTIVE-DEMO.html  QUICK_REFERENCE.txt  README.md  START_HERE.txt  UPWORK_FORM_CONTENT.txt  deploy-demo.sh  setup.bat  setup.sh
icarus-core/src/: agents.rs  attention.rs  causal_trace.rs  chunk_manager.rs  circuit_breaker.rs  concept_space.rs  config.rs  event_bus.rs  event_fusion.rs  event_queue.rs  events.rs  experts.rs  h2ce_adapter.rs  lattice.rs  learning.rs  lib.rs  main.rs  memory.rs  monte_carlo.rs  neural.rs  parser.rs  prompts.rs  rate_limit.rs  sampling_strategies.rs  session_manager.rs  state.rs  storm_mitigation.rs  streams.rs  todo_bridge.rs  trace.rs  types.rs  vulkan_renderer.rs  world_model.rs
icarus-core/src/mcp/: mod.rs  protocol.rs  server.rs  server.rs.markovian-backup  stdio.rs
icarus-core/src/tic/: cbr.rs  crystal.rs  mod.rs  phase_field.rs  resonant_attractor.rs
icarus-core/src/tic/lattice/: e8.rs  hcp.rs  hypercubic.rs  leech.rs  mod.rs
icarus-core/tests/: cognitive_loop_test.rs  integration_test.rs
src/: lib.rs  main.rs
src/gpu/: cuda_context.rs  kernels.rs  memory.rs  mod.rs
src/inference/: embeddings.rs  mod.rs  model.rs  tokenizer.rs
src/mcp/: mod.rs  parallel_tools.rs  protocol.rs  stdio.rs  training_tools.rs
src/parallel/: batch.rs  executor.rs  gpu_executor.rs  mod.rs  task.rs
src/training/: backprop.rs  mod.rs  online_learning.rs  optimizer.rs  weight_loader.rs
