[package]
name = "markovian_thinker"
version = "0.1.0"
edition = "2021"
authors = ["Cody Moore <cody.moore@outlook.com>"]
description = "Delethink: Efficient chunk-based Markovian reasoning for LLMs"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# HTTP client for LLM APIs
reqwest = { version = "0.12", features = ["json", "stream", "native-tls-vendored"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Token counting
tiktoken-rs = "0.5"  # For OpenAI models

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
uuid = { version = "1.10", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
rand = "0.8"

# Phase 8: Icarus Integration - H2CE semantic search (optional)
# h2ce = { path = "../H2CE", optional = true }

[features]
default = []
# Enable H2CE semantic search integration
# h2ce-integration = ["h2ce"]
# Enable full Icarus TIC system (all integrations)
# icarus = ["h2ce-integration"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "markovian-thinker"
path = "src/main.rs"

# [[bench]]
# name = "storm_mitigation_bench"
# harness = false

# [[bench]]
# name = "phase7_benchmarks"
# harness = false

