[package]
name = "icarus-core"
version = "0.1.0"
edition = "2021"
authors = ["Cody Moore <cody.moore@outlook.com>"]
description = "Icarus: Novel cognitive AI architecture with SSM/Liquid/RNN neural core"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
uuid = { version = "1.10", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Math and linear algebra (for neural computations)
ndarray = { version = "0.15", features = ["serde"] }
num-traits = "0.2"

# CUDA integration (optional, for GPU acceleration)
cudarc = { version = "0.11", optional = true, features = ["std", "cuda-version-from-build-system"] }

# Vulkan integration (optional, for GPU rendering)
vulkano = { version = "0.34", optional = true }
vulkano-shaders = { version = "0.34", optional = true }

# Integration with markovian-thinker
markovian_thinker = { path = ".." }

# H²CE semantic search integration
h2ce = { path = "../../H2CE", optional = true }
dotenv = "0.15.0"

# HTTP server (for MCP over HTTP)
hyper = { version = "0.14", features = ["full"] }

[features]
default = []  # Start with minimal features
# GPU compute via CUDA
cuda = ["cudarc"]
# GPU rendering via Vulkan
vulkan = ["vulkano", "vulkano-shaders"]
# H²CE semantic search
h2ce-integration = ["h2ce"]
# Full feature set
full = ["cuda", "vulkan", "h2ce-integration"]

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"  # For floating-point comparisons in tests

[[bin]]
name = "icarus"
path = "src/main.rs"

[[bin]]
name = "icarus-mcp"
path = "src/bin/icarus-mcp.rs"

[[bin]]
name = "icarus-autonomous"
path = "src/bin/icarus-autonomous.rs"

[[bin]]
name = "icarus-mcp-http"
path = "src/bin/icarus-mcp-http.rs"
